# node2nix-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  haskell-utils.nix  justfile  node2nix-hs.cabal
app/: Main.hs
src/: CLI.hs  Node2nixHs.hs  NodeEnv.hs  PackageLock.hs
src/CLI/: Options.hs
test/: Spec.hs
