cabal-version:       3.0
name:                node2nix-hs
version:             0.0.0.0
synopsis:            Drop&replace reimplementation of node2nix
description:
    Drop&replace reimplementation of node2nix.
    See README.md for more details.
license:             MIT
license-file:        LICENSE
author:              Frédéric Menou
maintainer:          Frédéric Menou <frederic.menou@gmail.com>
copyright:           2023 Frédéric Menou
category:            Development
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

common common-options
  build-depends:       base ^>= 4.16.4.0
                     , relude
                     , hnix
                     , text
                     , aeson
                     , parsec
                     , containers
                     , filepath

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     CLI
                     , NodeEnv
                     , Node2nixHs
                     , PackageLock

executable node2nix-hs
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       node2nix-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite node2nix-hs-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       node2nix-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
